tests/snapshots/examples_fixtures/aoc__2025__aoc_day4_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day4_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `reverse`.

  examples/aoc/2025/aoc_day4_haskell_style.flx:43:9
   |
43 |         reverse(acc)
   |         ^^^^^^^

Hint:
  Define it first: let reverse = ...;


error[E004]: Undefined Variable

I can't find a value named `reverse`.

  examples/aoc/2025/aoc_day4_haskell_style.flx:84:10
   |
84 |     _ -> reverse(acc)
   |          ^^^^^^^

Hint:
  Define it first: let reverse = ...;


error[E004]: Undefined Variable

I can't find a value named `reverse`.

  examples/aoc/2025/aoc_day4_haskell_style.flx:97:10
   |
97 |     _ -> reverse(acc)
   |          ^^^^^^^

Hint:
  Define it first: let reverse = ...;


error[E001]: Duplicate Name

Duplicate binding: `point_set` is already defined.

  examples/aoc/2025/aoc_day4_haskell_style.flx:102:5
    |
102 |     let point_set = points_to_set(points, {})
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  examples/aoc/2025/aoc_day4_haskell_style.flx:0:1
  |


error[E001]: Duplicate Name

Duplicate binding: `point_set` is already defined.

  examples/aoc/2025/aoc_day4_haskell_style.flx:110:5
    |
110 |     let point_set = points_to_set(points, {})
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  examples/aoc/2025/aoc_day4_haskell_style.flx:0:1
  |


error[E001]: Duplicate Name

Duplicate binding: `removed_set` is already defined.

  examples/aoc/2025/aoc_day4_haskell_style.flx:116:5
    |
116 |     let removed_set = points_to_set(removed, {})
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  examples/aoc/2025/aoc_day4_haskell_style.flx:0:1
  |


error[E001]: Duplicate Name

Duplicate binding: `points` is already defined.

  examples/aoc/2025/aoc_day4_haskell_style.flx:130:1
    |
130 | let points = collect_points(lines, 0, rows, cols, None)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  examples/aoc/2025/aoc_day4_haskell_style.flx:0:1
  |

Found 7 errors.
== stdout ==
<not executed>
